--- a/app/views/shared/_blob_button.html.erb
+++ b/app/views/shared/_blob_button.html.erb
@@ -1,5 +1,5 @@
 <button class="blob-btn">
-  How It Works
+  Go to Fixtures
   <span class="blob-btn__inner">
     <span class="blob-btn__blobs">
       <span class="blob-btn__blob"></span>
