--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <!-- Fixed navbar -->
 <div class="container-fluid px-6">
 <nav class="navbar navbar-expand-lg navbar-light custom-col">
-  <%= link_to root_path, class: "logo-url" do %>
+  <%= link_to fixtures_path, class: "logo-url" do %>
 
     <%= image_tag("hourglass_logo.png", { id: "logo", class: "navbar-brand d-inline align-middle", alt: "Logo", style: "width: 60; height: 60px" } ) %>
 
@@ -42,8 +42,11 @@
           Settings
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <%= link_to destroy_user_session_path, method: :delete do %>
-            <i class="fa fa-sign-out dropdown-item"><%= t(".sign_out", default: "Log out") %></i>
+          <a class="fas fa-home dropdown-item" href="/"><%= t(" Home") %></a>
+          <% if false %>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa fa-sign-out dropdown-item"><%= t(".sign_out", default: "Log out") %></i>
+            <% end %>
           <% end %>
         </div>
 
